[package]
name = "fabric-sdk"
authors = ["Arne Fuchs <arnefuchs@pm.me>"]
version = "0.4.0"
edition = "2024"
build = "build.rs"
license = "Apache-2.0"
description = """
Interact and program chaincode for the Hyperledger Fabric blockchain network
"""
repository="https://github.com/LF-Decentralized-Trust-labs/fabric-sdk-rust"
keywords = ["fabric", "blockchain", "hyperledger", "smart-contract", "web3"]
readme="README.md"

[dependencies]
#Chaincode
tokio = { version = "1.28.0", features = ["full"], optional = true }
futures-util = {version = "0.3.31", optional=true}
fabric-sdk-derives = { version = "0.1.0", path = "fabric-sdk-derives", optional = true }

#rustls = { version = "0.23.23", features = ["ring"] } # Makes problems when compiling static
openssl = { version = "0.10.75", features = ["vendored"], optional = true  } # Makes problems when compiling for wasm
hex = {version = "0.4.3", optional = true}
ecdsa = {version = "0.16.9", features=["der","arithmetic"], optional = true}
p256 = {version = "0.13.2", optional = true}
futures-channel = {version="0.3.31",optional = true}
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.143"}

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"]}

[build-dependencies]
tonic-prost-build = { version = "0.14.2", default-features = false}

[lib]
doctest = false

[features]
default = ["client"]
client = [
    "dep:openssl",
    "dep:tokio",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:hex"
]
chaincode = [
    "dep:tokio",
    "dep:futures-util",
    "dep:fabric-sdk-derives",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:hex"
]
