[package]
name = "fabric-sdk"
authors = ["Arne Fuchs <arnefuchs@pm.me>"]
version = "0.5.0"
edition = "2024"
build = "build.rs"
license = "Apache-2.0"
description = """
Interact and program chaincode for the Hyperledger Fabric blockchain network
"""
repository="https://github.com/LF-Decentralized-Trust-labs/fabric-sdk-rust"
keywords = ["fabric", "blockchain", "hyperledger", "smart-contract", "web3"]
readme="README.md"

[dependencies]
#Chaincode
tokio = { version = "1.47.1", features = ["rt", "time", "io-util", "sync", "macros"], default-features = false, optional = true }
futures-util = {version = "0.3.31", optional=true}
fabric-sdk-derives = { version = "0.1.0", path = "fabric-sdk-derives", optional = true }

hex = {version = "0.4.3", optional = true}
ecdsa = { version = "0.17.0-rc.16", features = ["der", "pkcs8", "algorithm", "pem", "sha2"], optional = true }
p256 = {version = "0.14.0-rc.7", optional = true}
futures-channel = {version="0.3.31",optional = true}
tonic = { version = "0.14.5", default-features = false, features = ["codegen"] }
tonic-web-wasm-client = { version = "0.8.0", optional = true} #0.9.0 is using wasm-streams 0.5 which is incompatible with some wasm applications
getrandom = {version= "0.4.2", features=["wasm_js"], optional = true}

tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.143"}
sha2 = {version = "0.10.9", optional = true}
web-time = {version = "1.1.0", optional = true}

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"]}

[build-dependencies]
tonic-prost-build = { version = "0.14.2", default-features = false}

[lib]
doctest = false

[features]
default = ["client"]
client-wasm = [
    "dep:tokio",
    "dep:web-time",
    "dep:tonic-web-wasm-client",
    "dep:getrandom",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex"
]
client = [
    "dep:tokio",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex"
]
chaincode = [
    "dep:tokio",
    "dep:futures-util",
    "dep:fabric-sdk-derives",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex"
]
